
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    email it to: develop@darkbot.info
    Support (only): http://forum.darkbot.info
    *******************************************************


Darkbot 7.0-RC8: June 20th, 2003
	- I screwed up the Makefile by accident, adding some
	  new features, and I hadn't finished yet when I 
	  committed. OOPS. Fixed now.

	- Updated more depricated URL strings.

	- Updated language files.

	- Minor changes on startup splash screen.

	- Support forum URL is now http://www.darkbot.org/forum

	- Updated the default servers.ini file to reflect the
	  changes.

	- You can now use Darkbot on servers which require a 
	  connection password. Check servers.ini for an 
	  example.

	- Updated some outdated text in the configure script.

	- Darkbots now default to irc.darkbot.org #darkbot.
 	  Please edit your setup.ini and servers.ini files to 
	  minimize traffic, since that is also our help channel.

Darkbot 7.0-RC7: June 2nd, 2003
	
	- Updated the INSTALL.txt file to reflect some support
	  changes.

	- Fix for possible problems with counting in datasearch
	  algorithm.  long was changed to size_t.

	- Fixed bug that prevented ACTIONs from being used on
	  RDB responses.

	- Suppressed more warnings when compiling on Solaris
	  from chan.c, in the do_math function. 

	- Removed another unused variable from url.c

	- Removed an unused variable from random.c

	- Removed the .runonce script from executing during the
	  "make" process. The funcionality this script produced
	  is depricated. Also removed this file from the distro.

	- Darkbot will now properly compile on Solaris. To make
	  this happen, you need to manually edit source/Makefile,
	  and remove a comment symbol before the word "LIBS".

	- Suppressed a warning message from main.h that happened
	  when compiling on Solaris. 

	- Makefile now works correctly on Solaris.
